# router-lab

./: .bumpversion.cfg  .gitignore  README.md  event_dispatcher.py  pyproject.toml
algo_my/: __base__.py  __init__.py
my_node/: __init__.py  dummy.py  dummy_pkt.py
router_lab/: __init__.py  __main__.py  config.py  parts.py
router_lab/experiments/: __base__.py  routing_algorithm.py
router_lab/protocols/: world.py
router_lab/sandbox/: __init__.py  node.py  node_custom_base.py  node_stats.py  sandbox.py  world.py  world_info.py  world_logging.py  world_stats.py
router_lab/socket_events/: __init__.py  configure.py  connect.3.py  connect.py  disconnect.py  list_impls.py  node_stats.py  subscribe_world_logs.py  subscribe_world_stats.py  world_configure.py  world_info.py  world_start.py  world_start_activity.py  world_stop.py
router_lab/utils/: __init__.py  __version__.py  explicit_del_dict.py  ip.py  logger.py  promise_like.py  socket.py  undefined.py
web/app/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
web/app/scripts/: gen-oss-notice.ts
web/app/src/components/main/: BackdropGuide.tsx  FnSocket.tsx  Loggie.tsx  index.tsx
web/app/src/components/main/GraphView/: NodeStats.tsx  index.tsx
web/app/src/components/main/TopPanel/: AlgorithmConfiguration.tsx  Metrics.tsx  OSSNoticeContent.tsx  ParameterConfigurations.tsx  index.tsx
web/app/src/pages/: _document.tsx  index.tsx
web/app/src/recoil/: global.ts  index.ts  utils.ts  world.ts
web/app/src/styles/: globals.css
web/html/: 404.html  index.html
web/html/_next/static/T0mDSKSNnjdhSYOkhluD0/: _buildManifest.js
web/html/_next/static/UrQbF_9VRYn3ATEFWJm7z/: _buildManifest.js
web/html/_next/static/chunks/: 421-edc497d856644211.js  425.a662918e07f8050f.js  513-68e3a59b767b9fc8.js  76d8c668-4ca7ca4f6fea04cc.js  d25bd147.d05330bdf8dba54d.js  fb7d5399-78c958dddd18195b.js  webpack-fcfb83bfc6ed52a5.js
web/html/_next/static/chunks/pages/: index-138e2777f72221a6.js  index-c400ea1e49ee10a3.js  index-ce82d523efdffaa8.js
web/html/_next/static/css/: 32586a8b0a8a958d.css  3e191473a36cab41.css
web/html/_next/static/dRQMw3nAx0s8A7Tju5P8G/: _buildManifest.js
